--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
     <br>
 
     <label >Subscription:
-        <input type="radio" name="sub1" value="1 year">! year
+        <input type="radio" name="sub1" value="1 year" checked>1 year
         <input type="radio" name="sub2" value="2 year">2 year
     </label>
     <br>
